fix: 加固用户认证并同步PRD